# scream

./: .gitignore  README.md  data_aquisition.ipynb  links.txt  models.ipynb  preprocessing.ipynb  pyproject.toml  reqs.txt  requirements.txt  short_requirements.txt  urls.txt  whisper.ipynb
channel_videos/: derbiograph.txt  funk-misc.txt  germania.txt  hyperboletv.txt  sonnetodsterne.txt  waskostetdiewelt.txt
data-analysis/: metadata.txt
datasynth/: README.md  config.yaml  get_whole_video_transcript.ipynb  get_youtube_ids.py  get_youtube_videos_by_channel.py  pyproject.toml  synthesize.py  synthesize_configs.json  synthesize_configs.yaml  tts.ipynb
datasynth/channel_videos/: atlas_funk.txt  chrismuellerr.txt  derfall.txt  diedaoben.txt  glanzundnatur.txt  maithinkx.txt  simplicissimus.txt  terraxplore.txt  unbubble.txt
datasynth/src/: audio.py  text.py  utils.py
deployment/: llm-prompting.ipynb  test.ipynb
evaluation/: data-analysis.ipynb  data_utils.py  distil-large-v3_results.csv  eval_utils.py  evaluate.ipynb  metadata.txt  perplexity_sum.ipynb  speaker_diarization-210.json  video_df.parquet  vocab.json  wav2vec_results.csv  whisper-small_results.csv  yt_df_filtered.csv
evaluation/results/: wav2vec_metrics_df.parquet  (+18 more)
misc/: create_hf_dataset.py  data_aquisition.ipynb  evaluate.ipynb  experiments.ipynb  hf.ipynb  models.ipynb  nemo-reqs.txt  nemo.ipynb  nemo.md  nemo_models.txt  paddlespeech.ipynb  peft_bnb_whisper_large_v2_training-original.ipynb  peft_bnb_whisper_large_v2_training.ipynb  whisperx.ipynb
models/: __init__.py  ctc.py  wav2vec.py
notebooks/: llm-prompting.ipynb  nemo.ipynb  peft_bnb_whisper_large_v2_training.ipynb  whisperx.ipynb
scripts/: create_hf_dataset.py
telegram_bot/: echobot.py  summarize_utils.py  transcribe_utils.py  utils.py
training/: fine_tune_whisper.ipynb
utils/: __init__.py  data_utils.py  general.py  io.py  model_utils.py  plots.py
