[project]
name = "speech2text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.5.0",
    "google-generativeai>=0.7.2",
    "jupyter>=1.1.1",
    "langchain>=0.0.27",
    "langchain-google-genai>=2.0.0",
    "matplotlib>=3.9.2",
    "numpy>=1.22",
    "openai>=1.50.0",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=17.0.0",
    "pytelegrambotapi>=4.23.0",
    "soundfile>=0.12.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.1",
    "numba==0.60.0",
    "torch-audiomentations>=0.11.1",
    "torchmetrics>=1.4.2",
    "faster-whisper>=1.0.3",
    "accelerate>=0.34.2",
    "editdistance>=0.8.1",
    "num2words>=0.5.13",
    "sentencepiece>=0.2.0",
    "torch-lr-finder>=0.2.2",
    "librosa>=0.10.2.post1",
]
